update based on feedback

--- a/src/server/delivery-group-standards/views/index.njk
+++ b/src/server/delivery-group-standards/views/index.njk
@@ -31,7 +31,7 @@
         </li>
         <li class="govuk-!-margin-bottom-4" style="border-top: 1px solid #b1b4b6; padding-top: 15px;">
           <h2 class="govuk-heading-m">
-            2. Maintain an inventory of products and services
+            2. Maintain a list of products and services
           </h2>
           <p class="govuk-body">
             <a href="/delivery-group-standards/2" class="govuk-link govuk-link--no-visited-state">
