--- a/src/server/delivery-group-standards/views/standard-1.njk
+++ b/src/server/delivery-group-standards/views/standard-1.njk
@@ -108,7 +108,7 @@
           </li>
           <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
             <span class="gem-c-contents-list__list-item-dash" aria-hidden="true"></span>
-            <a class="gem-c-contents-list__link govuk-link" href="#how-we-measure">How we measure</a>
+            <a class="gem-c-contents-list__link govuk-link" href="#how-we-measure">How we measure success</a>
           </li>
           <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
             <span class="gem-c-contents-list__list-item-dash" aria-hidden="true"></span>
@@ -128,7 +128,7 @@
         Without clear outcomes, teams pull in different directions and waste effort.
       </p>
 
-      <h2 class="govuk-heading-l" id="how-we-measure">How we measure</h2>
+      <h2 class="govuk-heading-l" id="how-we-measure">How we measure success</h2>
       
       <p class="govuk-body">
         We use a red, amber, green (RAG) rating.
@@ -143,7 +143,7 @@
           Clear, documented outcomes aligned to strategy
         </h3>
         <p class="govuk-body">
-          You have clear outcomes that everyone understands and uses to guide decisions. They align with your departmental strategy and are communicated consistently.
+          You have clear and understandable outcomes that are clearly explained and aligned with departmental strategy. 
         </p>
         <h4 class="govuk-heading-s">You must be able to show:</h4>
         <ul class="govuk-list govuk-list--bullet">
@@ -164,13 +164,13 @@
         <p class="govuk-body">
           You have outcomes, but they are vague, not consistently understood, or not shared regularly. Alignment to roadmap or departmental priorities is not clear.
         </p>
-        <h4 class="govuk-heading-s">Common problems:</h4>
+        <h4 class="govuk-heading-s">Common problems can include:</h4>
         <ul class="govuk-list govuk-list--bullet">
           <li>outcomes are high-level or aspirational, without specifics</li>
           <li>weak or missing links to strategic priorities</li>
           <li>infrequent or inconsistent communication</li>
         </ul>
-        <h4 class="govuk-heading-s">To move to green:</h4>
+        <h4 class="govuk-heading-s">To move to green, you should:</h4>
         <ul class="govuk-list govuk-list--bullet">
           <li>rewrite outcomes so they are specific and measurable</li>
           <li>check understanding across the team (for example, short survey or stand-up playback)</li>
@@ -190,7 +190,7 @@
         <p class="govuk-body">
           Outcomes are vague, undocumented or inconsistent. People are not sure what success looks like or how work links to strategy.
         </p>
-        <h4 class="govuk-heading-s">Indicators:</h4>
+        <h4 class="govuk-heading-s">Common problems can include:</h4>
         <ul class="govuk-list govuk-list--bullet">
           <li>no documented outcomes (only broad aspirations)</li>
           <li>team members cannot say what they are trying to achieve</li>
@@ -202,7 +202,7 @@
       <h2 class="govuk-heading-l" id="delivery-group-standards">Delivery group standards</h2>
       <ol class="govuk-list govuk-list--number">
         <li><strong>Define and share outcomes</strong></li>
-        <li><a href="/delivery-group-standards/2" class="govuk-link">Maintain an inventory of products and services</a></li>
+        <li><a href="/delivery-group-standards/2" class="govuk-link">Maintain a list of products and services</a></li>
         <li><a href="/delivery-group-standards/3" class="govuk-link">Publish a roadmap for change</a></li>
         <li><a href="/delivery-group-standards/4" class="govuk-link">Define success measures and share progress</a></li>
       </ol>
