--- a/src/server/delivery-group-standards/views/standard-3.njk
+++ b/src/server/delivery-group-standards/views/standard-3.njk
@@ -108,7 +108,7 @@
           </li>
           <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
             <span class="gem-c-contents-list__list-item-dash" aria-hidden="true"></span>
-            <a class="gem-c-contents-list__link govuk-link" href="#how-we-measure">How we measure</a>
+            <a class="gem-c-contents-list__link govuk-link" href="#how-we-measure">How we measure success</a>
           </li>
           <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
             <span class="gem-c-contents-list__list-item-dash" aria-hidden="true"></span>
@@ -128,10 +128,10 @@
         Without a roadmap, delivery groups react to immediate pressures rather than working towards strategic goals. This creates confusion, wastes resources and damages stakeholder trust.
       </p>
 
-      <h2 class="govuk-heading-l" id="how-we-measure">How we measure</h2>
+      <h2 class="govuk-heading-l" id="how-we-measure">How we measure success</h2>
       
       <p class="govuk-body">
-        Each standard is measured using a RAG (Red, Amber, Green) rating system.
+        We use a red, amber, green (RAG) rating.
       </p>
 
       <div class="govuk-!-margin-bottom-6">
@@ -145,7 +145,7 @@
         <p class="govuk-body">
           The delivery group has a clear roadmap that shows how change initiatives connect to outcomes and existing services. Priorities are transparent and based on evidence.
         </p>
-        <h4 class="govuk-heading-s">Evidence the delivery group should show:</h4>
+        <h4 class="govuk-heading-s">You must be able to show:</h4>
         <ul class="govuk-list govuk-list--bullet">
           <li>publish a roadmap that links change initiatives to outcomes and existing services</li>
           <li>use a clear process to prioritise work and changes to the roadmap</li>
@@ -165,12 +165,19 @@
         <p class="govuk-body">
           A roadmap exists but lacks clear priorities or alignment to outcomes. Roadmaps change frequently without clear reasons.
         </p>
-        <h4 class="govuk-heading-s">Common problems:</h4>
+        <h4 class="govuk-heading-s">Common problems can include:</h4>
         <ul class="govuk-list govuk-list--bullet">
           <li>roadmap is high-level and lacks detail</li>
           <li>priorities are unclear or based on opinion rather than evidence</li>
           <li>roadmap changes frequently without clear reasons</li>
           <li>stakeholders do not understand or support the roadmap</li>
+        </ul>
+        <h4 class="govuk-heading-s">To move to green, you should:</h4>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>add detail to your roadmap showing how initiatives link to outcomes and services</li>
+          <li>establish a clear prioritisation process</li>
+          <li>create a regular review cycle for roadmap updates</li>
+          <li>ensure all team members understand the roadmap and communicate it to stakeholders</li>
         </ul>
       </div>
 
@@ -185,7 +192,7 @@
         <p class="govuk-body">
           No roadmap exists. Change happens reactively in response to immediate pressures. There is limited visibility of future direction.
         </p>
-        <h4 class="govuk-heading-s">Indicators:</h4>
+        <h4 class="govuk-heading-s">Common problems can include:</h4>
         <ul class="govuk-list govuk-list--bullet">
           <li>no roadmap exists</li>
           <li>change happens reactively in response to immediate pressures</li>
@@ -198,7 +205,7 @@
       <h2 class="govuk-heading-l" id="delivery-group-standards">Delivery group standards</h2>
       <ol class="govuk-list govuk-list--number">
         <li><a href="/delivery-group-standards/1" class="govuk-link">Define and share outcomes</a></li>
-        <li><a href="/delivery-group-standards/2" class="govuk-link">Maintain an inventory of products and services</a></li>
+        <li><a href="/delivery-group-standards/2" class="govuk-link">Maintain a list of products and services</a></li>
         <li><strong>Publish a roadmap for change</strong></li>
         <li><a href="/delivery-group-standards/4" class="govuk-link">Define success measures and share progress</a></li>
       </ol>
