--- a/src/server/delivery-group-standards/views/standard-4.njk
+++ b/src/server/delivery-group-standards/views/standard-4.njk
@@ -108,7 +108,7 @@
           </li>
           <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
             <span class="gem-c-contents-list__list-item-dash" aria-hidden="true"></span>
-            <a class="gem-c-contents-list__link govuk-link" href="#how-we-measure">How we measure</a>
+            <a class="gem-c-contents-list__link govuk-link" href="#how-we-measure">How we measure success</a>
           </li>
           <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
             <span class="gem-c-contents-list__list-item-dash" aria-hidden="true"></span>
@@ -128,10 +128,10 @@
         Without success measures, delivery groups risk focusing on activity rather than impact. This can lead to wasted effort, missed opportunities to learn, and uncertainty about whether outcomes are being achieved.
       </p>
 
-      <h2 class="govuk-heading-l" id="how-we-measure">How we measure</h2>
+      <h2 class="govuk-heading-l" id="how-we-measure">How we measure success</h2>
       
       <p class="govuk-body">
-        Each standard is measured using a RAG (Red, Amber, Green) rating system.
+        We use a red, amber, green (RAG) rating.
       </p>
 
       <div class="govuk-!-margin-bottom-6">
@@ -145,7 +145,7 @@
         <p class="govuk-body">
           The delivery group has defined and shared measurable indicators of success linked to outcomes. Data is collected, analysed, and published openly with stakeholders at regular intervals. Progress is used to inform decisions, support learning, and adjust plans.
         </p>
-        <h4 class="govuk-heading-s">Evidence the delivery group should show:</h4>
+        <h4 class="govuk-heading-s">You must be able to show:</h4>
         <ul class="govuk-list govuk-list--bullet">
           <li>measurable indicators of success are defined and shared for each outcome</li>
           <li>measures are clearly linked to delivery group outcomes, not just activity</li>
@@ -166,13 +166,21 @@
         <p class="govuk-body">
           Some measures exist, but they are incomplete or not clearly linked to outcomes. Progress reporting is inconsistent or lacks sufficient insight to guide decisions.
         </p>
-        <h4 class="govuk-heading-s">Common problems:</h4>
+        <h4 class="govuk-heading-s">Common problems can include:</h4>
         <ul class="govuk-list govuk-list--bullet">
           <li>measures focus on outputs (for example, number of releases) rather than outcomes (for example, improved user satisfaction)</li>
           <li>data is collected irregularly or not analysed effectively</li>
           <li>progress reporting happens infrequently or only within teams</li>
           <li>limited use of data to inform decisions and roadmap prioritisation</li>
           <li>stakeholders have differing understandings of success</li>
+        </ul>
+        <h4 class="govuk-heading-s">To move to green, you should:</h4>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>define focused measures that clearly link to delivery group outcomes</li>
+          <li>establish regular data collection and analysis processes</li>
+          <li>create consistent progress reporting schedules and formats</li>
+          <li>use performance data to inform roadmap decisions and prioritisation</li>
+          <li>ensure all stakeholders understand and agree on success measures</li>
         </ul>
       </div>
 
@@ -187,7 +195,7 @@
         <p class="govuk-body">
           No success measures are defined or shared. Progress is judged subjectively or through anecdotal evidence. There is little understanding of whether outcomes are being achieved.
         </p>
-        <h4 class="govuk-heading-s">Indicators:</h4>
+        <h4 class="govuk-heading-s">Common problems can include:</h4>
         <ul class="govuk-list govuk-list--bullet">
           <li>no defined measures of success or performance indicators</li>
           <li>progress updates are infrequent or missing</li>
@@ -200,7 +208,7 @@
       <h2 class="govuk-heading-l" id="delivery-group-standards">Delivery group standards</h2>
       <ol class="govuk-list govuk-list--number">
         <li><a href="/delivery-group-standards/1" class="govuk-link">Define and share outcomes</a></li>
-        <li><a href="/delivery-group-standards/2" class="govuk-link">Maintain an inventory of products and services</a></li>
+        <li><a href="/delivery-group-standards/2" class="govuk-link">Maintain a list of products and services</a></li>
         <li><a href="/delivery-group-standards/3" class="govuk-link">Publish a roadmap for change</a></li>
         <li><strong>Define success measures and share progress</strong></li>
       </ol>
