--- a/src/server/common/templates/layouts/page.njk
+++ b/src/server/common/templates/layouts/page.njk
@@ -110,13 +110,13 @@
           <h2 class="govuk-visually-hidden">Support links</h2>
           <ul class="govuk-footer__inline-list">
             <li class="govuk-footer__inline-list-item">
-              <a class="govuk-footer__link" href="mailto:CCTSAssurance@defra.gov.uk?subject=Privacy%20enquiry">
-                Privacy
+              <a class="govuk-footer__link" href="/accessibility">
+                Accessibility
               </a>
             </li>
             <li class="govuk-footer__inline-list-item">
-              <a class="govuk-footer__link" href="mailto:CCTSAssurance@defra.gov.uk?subject=Accessibility%20enquiry">
-                Accessibility
+              <a class="govuk-footer__link" href="/cookies">
+                Cookies
               </a>
             </li>
           </ul>
