--- a/src/server/common/templates/layouts/page.njk
+++ b/src/server/common/templates/layouts/page.njk
@@ -64,6 +64,11 @@
               <a class="govuk-service-navigation__link" href="/professions">Professions</a>
             </li>
             {% endif %}
+            {% if isAuthenticated %}
+            <li class="govuk-service-navigation__item{% if currentPath and currentPath.startsWith('/themes') %} govuk-service-navigation__item--active{% endif %}">
+              <a class="govuk-service-navigation__link" href="/themes">Themes</a>
+            </li>
+            {% endif %}
             <li class="govuk-service-navigation__item govuk-service-navigation__item--end">
               <a class="govuk-service-navigation__link" href="{{ '/auth/logout' if isAuthenticated else '/auth/login' }}">
                 {{ 'Sign out' if isAuthenticated else 'Sign in' }}
